--- a/static/html/default/templates/inventario/principal.html
+++ b/static/html/default/templates/inventario/principal.html
@@ -6,11 +6,18 @@
 </style>
 <div class="panel span10" data-role="panel">
 	<div class="panel-header">
-		Módulo de control de inventarios	
+		Módulo de control de inventario	
 	</div>
 	<div class="panel-content">
 		<p>
-			Los inventarios son bienes tangibles que se tienen para la venta en el curso ordinario del negocio o para ser consumidos en la producción de bienes o servicios para su posterior comercialización
+			El módulo de control de inventario ha sido diseñado 
+			pensando en las necesidades de las empresas  
+			que requieren de un control estricto de las existencias de sus artículos de consumo interno y para la venta.
+		</p>
+		<p>
+			<strong>Control de Inventarios</strong> integra todos los movimientos transaccionales que tienen relación con consumos, 
+			producción, ventas, ingresos, entre otros, realizados directamente en él o desde los demás módulos con 
+			los que interactúa.
 		</p>
 	</div>
 </div>
@@ -19,14 +26,13 @@
 </p>
 <div class="panel span10" data-role="panel">
 	<div class="panel-header bg-lightBlue fg-white">
-		Información	
+		Características	
 	</div>
 	<div class="panel-content">
 		<p>
-			Funciones disponibles:
 			<ul>
 				<li>
-					Control de proveedores
+					Gestión de proveedores
 				</li>
 				<li>
 					Creación de catálogos de productos
@@ -35,10 +41,10 @@
 					Segmentación de productos
 				</li>
 				<li>
-					Gestión de bodega
+					Gestión de bodegas
 				</li>
 				<li>
-					Control de existencias
+					Control de existencias de productos
 				</li>
 			</ul>
 		</p>
