--- a/static/html/default/templates/inventario/marcas.html
+++ b/static/html/default/templates/inventario/marcas.html
@@ -1,7 +1,9 @@
-<script type="text/javascript">
-    var grid_marca_id = "marca_grid";
+<script type="text/javascript" >
 
-    var dsOption_marca = {
+    var grid_demo_id = "marca_grid";
+
+
+    var dsOption = {
         fields: [
             {name: 'id'},
             {name: 'nombre'}
@@ -9,22 +11,24 @@
         recordType: 'object'
     }
 
-    var colsOption_marca = [
+    var colsOption = [
         {id: 'id', header: "Id", width: 92},
-        {id: 'nombre', header: "Marcas", width: 525, editor: {type: 'text'}}
+        {id: 'nombre', header: "Marca", width: 285, editor: {type: 'text'}}
+
     ];
 
-    var gridOption_marca = {
-        id: grid_marca_id,
+
+    var gridOption = {
+        id: grid_demo_id,
         loadURL: '/{systemModuleName}/grid_tables/marca_grid_1',
         saveURL: '/{systemModuleName}/inventario/_actualizarMarca',
-        width: "620", //"100%", // 700,
+        width: "380", //"100%", // 700,
         height: "280", //"100%", // 330,
         container: 'gridbox',
         replaceContainer: true,
         encoding: 'UTF-8', // Sigma.$encoding(), 
-        dataset: dsOption_marca,
-        columns: colsOption_marca,
+        dataset: dsOption,
+        columns: colsOption,
         clickStartEdit: true,
         defaultRecord: {'id': "00", 'nombre': ""},
         pageSize: 10,
@@ -33,51 +37,59 @@
         toolbarContent: 'reload | del save | nav state'
     };
 
-
-    var mygrid = new Sigma.Grid(gridOption_marca);
+    var mygrid = new Sigma.Grid(gridOption);
     //Sigma.Util.onLoad(function() {
         mygrid.render();
     //});
-</script>
 
+</script>
+<h3>Segmentación</h3>
+<p class="text-muted">Defina la forma en que se clasificarán sus productos</p>
+<hr/>
 <div id="page-container">
-    <div id="content" class="span8">
-        <form action="/{systemModuleName}/inventario/guardar_marca" method="post">
-            <table>
-                <tr>
-                        <td><h3>Nueva marca:</h3></td>
-                        <td><h3>Reutilizar ID</h3></td>
-                    </tr>
-                <tr>
-                <tr>
-                        <td>
-                            <div class="input-control text">
-                                <input type="text" autofocus name="nombre" required/> 
-                            </div>
-                                <button type="submit" class="big"><i class="icon-save"></i>Agregar</button>
-                        </td>
-                        <td>
-                            <div class="input-control checkbox">
-                                <label>
+    <div id="content" class="grid">
+        <div class="row">
+            <div class="panel span6">
+                <div class="panel-header">Marcas</div>
+                <div class="panel-content">
+                    <div class="input-control text span5">
+                        <input type="text" placeholder="Buscar" onkeyup="filtrarResultados(event);"/>
+                        <button class="btn-search" type="button"></button>
+                    </div>
+                    <br/>
+                    <div id="bigbox" style="margin:0px;display:!none;">
+                        <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
+                
+                         </div>
+                    </div>
+                    <div style="clear: both;"></div>  
+                    <br/>
+                    <br/>
+                    <br/>
+                </div>
+            </div>
+            <div class="panel span4">
+                <div class="panel-header">
+                    Crear una nueva marca
+                </div>
+                <div class="panel-content">
+                     <form action="/{systemModuleName}/inventario/guardar_marca" method="post">
+                        <div class="input-control checkbox">
+                            <label>
                                     <input type="checkbox" name="rellenar"  />
-                                    <span class="check2"></span>
-                                </label>
-                            </div>
-                        </td>
-                    </tr>
-                <tr>
-            </table>
-        </form>
+                                    <span class="check"></span>
+                            </label>
+                        </div>
+                        Reutilizar correlativos
+                        <div class="input-control text">
+                                <input type="text" placeholder="Nombre de la nueva marca"  name="nombre" required autofocus/> 
+                        </div>
+                        <button type="submit" class="big"><i class="icon-save"></i>Agregar</button>        
+                    </form>
+                </div>
+            </div> 
+         </div>   
     </div>
-     <div class="input-control text span8">
-        <input type="text" placeholder="Buscar" onkeyup="filtrarResultados(event);"/>
-        <button class="btn-search" type="button"></button>
-    </div>
-    <div id="bigbox" style="margin:0px;display:!none;">
-        <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
-         </div>
-    </div>
-    <div style="clear: both;"></div>
 </div>
 <script type="text/javascript">
     function filtrarResultados(e){
