--- a/static/html/default/templates/inventario/menu/segmentacion.html
+++ b/static/html/default/templates/inventario/menu/segmentacion.html
@@ -1,12 +1,12 @@
 <nav class="sidebar light span3" style="float:left;">
     <ul>
         <li class="title">Categorías</li>
-        <li class=""><a href="javascript: void(0);" onclick="cargar('linea');"><i class="icon-list"></i>Lineas</a></li>
+        <li class=""><a href="javascript: void(0);" onclick="cargar('linea');"><i class="icon-list"></i>Líneas</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('color');"><i class="icon-droplet"></i>Colores</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('genero');"><i class="icon-accessibility"></i>Géneros</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('marca');"><i class="icon-tag"></i>Marcas</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('grupo');"><i class="icon-puzzle"></i>Grupos</a></li>
-        <li class=""><a href="javascript: void(0);" onclick="cargar('concepto');"><i class="icon-comments"></i>Concepto</a></li>
+        <li class=""><a href="javascript: void(0);" onclick="cargar('concepto');"><i class="icon-comments"></i>Conceptos</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('tacon');"><i class="icon-ruler"></i>Tacones</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('suela');"><i class="icon-minus-2"></i>Suelas</a></li>
         <li class=""><a href="javascript: void(0);" onclick="cargar('material');"><i class="icon-scissors"></i>Materiales</a></li>
@@ -15,12 +15,16 @@
 
 <div id="scontent" class="span10" style="float:left; margin-left: 50px;">
 	<div class="panel span10" data-role="panel">
-	<div class="panel-header">
+	<div class="panel-header text-center">
 		Segmentación de productos
 	</div>
 	<div class="panel-content">
-		<p>
-			Permite agrupar sus productos por medio de las diferentes categorías disponibles. De esta forma puede saber fácilmente que tipos de productos son los que más se venden y atraen más la atención de sus clientes. 
+		<p class="text-center">
+			Permite clasificar los productos según las características que posee.
+		</p>
+		<p class="text-center">
+			Seleccione una de las categorías listadas en el panel de la izquierda para agregar, modificar o eliminar
+			elementos de dicha categoría. 
 		</p>
 	</div>
 </div>
