--- a/static/html/default/templates/inventario/mov_kardex.html
+++ b/static/html/default/templates/inventario/mov_kardex.html
@@ -44,6 +44,7 @@
 		var estilo = $('#estilo').val();
 		var color  = $('#color').val();
 		var talla  = $('#talla').val();
+		var proveedor  = $('#proveedor').val();
 		var fe_limitInf = $('#fe_limitInf').val();
 		var fe_limitSup = $('#fe_limitSup').val();
 		
@@ -55,6 +56,7 @@
 			"estilo": estilo,
 			"color": color,
 			"talla": talla,
+			"proveedor": proveedor,
 			"fe_limitInf": fe_limitInf,
 			"fe_limitSup": fe_limitSup,
 			"entradas": window.entradas,
@@ -92,12 +94,13 @@
 	}
 </script>
 
-<h1 style="float: left;" class="span4"><i class="icon-clipboard"></i> Kardex</h1>
+<h1 class="span4"><i class="icon-clipboard"></i> Kardex</h1>
 
 <p>
 	<br /><br />
 </p>
 
+<!-- FORMULARIO DE FILTRADO -->
 <form style="float: left; display: block;" class="span12">
 	<div class="input-control checkbox">
 		<label>
@@ -113,6 +116,7 @@
 			Salidas
 		</label>
 	</div>
+	<br/><br/>
     <div class="input-control text span1">
     	<input type="text" id="linea" placeholder="Linea"/>
     </div>
@@ -125,8 +129,9 @@
     <div class="input-control text span1">
     	<input type="text" id="talla" placeholder="Talla"/>
     </div>
-    <br />
-    <br />	
+	<div class="input-control text span2">
+    	<input type="text" id="proveedor" placeholder="Proveedor"/>
+    </div>
 	<div id="limitInf" class="input-control text span3">
     	<input type="text" id="fe_limitInf" />
     	<button type="button" class="btn-date"></button>
@@ -135,10 +140,11 @@
     	<input type="text" id="fe_limitSup"/>
     	<button type="button" class="btn-date"></button>
     </div>
-    <br/>
-    <br/>
+	
     <button type="button" class="primary" onclick="generar_kardex();"> Consultar </button>
 </form>
+<!-- FIN FORMULARIO DE FILTRADO -->
+
 <div style="clear: both;"></div>
 <p>
 	<br /><br />
